Enhanced CORS configuration with manual preflight handler

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn&family=Vujahday+Script&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/Wanderlog.png" />
+    <link rel="shortcut icon" type="image/png" href="/Wanderlog.png" />
+    <link rel="apple-touch-icon" href="/Wanderlog.png" />
+    
     <title>Wanderlog</title>
   </head>
   <body>
